Bug 1600063 - Add some logging for DecodedStream. r=padenot

Depends on D55981

Differential Revision: https://phabricator.services.mozilla.com/D56375